--- a/cumulus/polkadot-omni-node/lib/Cargo.toml
+++ b/cumulus/polkadot-omni-node/lib/Cargo.toml
@@ -13,7 +13,6 @@ workspace = true
 path = "src/lib.rs"
 
 [dependencies]
-anyhow = { workspace = true }
 async-trait = { workspace = true }
 clap = { features = ["derive"], workspace = true }
 codec = { workspace = true, default-features = true }
@@ -29,10 +28,13 @@ jsonrpsee = { features = ["server"], workspace = true }
 parachains-common = { workspace = true, default-features = true }
 frame-metadata = { workspace = true, default-features = true }
 scale-info = { workspace = true }
+subxt = { workspace = true, features = ["native"] }
+subxt-metadata = { workspace = true, default-features = true }
 
 # Substrate
 frame-benchmarking = { optional = true, workspace = true, default-features = true }
 frame-benchmarking-cli = { workspace = true, default-features = true }
+sp-crypto-hashing = { workspace = true }
 sp-runtime = { workspace = true }
 sp-core = { workspace = true, default-features = true }
 sp-session = { workspace = true, default-features = true }
@@ -58,12 +60,16 @@ sc-rpc = { workspace = true, default-features = true }
 sp-version = { workspace = true, default-features = true }
 sp-weights = { workspace = true, default-features = true }
 sc-tracing = { workspace = true, default-features = true }
+sc-runtime-utilities = { workspace = true, default-features = true }
+sp-storage = { workspace = true, default-features = true }
 frame-system-rpc-runtime-api = { workspace = true, default-features = true }
 pallet-transaction-payment = { workspace = true, default-features = true }
 pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = true }
 sp-inherents = { workspace = true, default-features = true }
 sp-api = { workspace = true, default-features = true }
 sp-consensus-aura = { workspace = true, default-features = true }
+sp-io = { workspace = true, default-features = true }
+sp-wasm-interface = { workspace = true, default-features = true }
 sc-consensus-manual-seal = { workspace = true, default-features = true }
 sc-sysinfo = { workspace = true, default-features = true }
 prometheus-endpoint = { workspace = true, default-features = true }
@@ -86,6 +92,7 @@ cumulus-client-parachain-inherent = { workspace = true, default-features = true 
 cumulus-client-service = { workspace = true, default-features = true }
 cumulus-primitives-aura = { workspace = true, default-features = true }
 cumulus-primitives-core = { workspace = true, default-features = true }
+
 cumulus-relay-chain-interface = { workspace = true, default-features = true }
 futures-timer = "3.0.3"
 
@@ -95,7 +102,6 @@ nix = { features = ["signal"], workspace = true }
 tokio = { version = "1.32.0", features = ["macros", "parking_lot", "time"] }
 wait-timeout = { workspace = true }
 cumulus-test-runtime = { workspace = true }
-sp-io = { workspace = true }
 
 [features]
 default = []
