--- a/substrate/frame/support/procedural/Cargo.toml
+++ b/substrate/frame/support/procedural/Cargo.toml
@@ -43,7 +43,7 @@ scale-info = { features = ["derive"], workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 sp-runtime = { features = [
-	"serde"
+	"serde",
 ], workspace = true }
 frame-system = { workspace = true }
 frame-support = { workspace = true }
