--- a/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/assets/asset-hub-rococo/Cargo.toml
@@ -35,3 +35,4 @@ parachains-common.workspace = true
 parachains-common.default-features = true
 emulated-integration-tests-common.workspace = true
 rococo-system-emulated-network.workspace = true
+xcm-runtime-apis.workspace = true
