--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -78,12 +78,8 @@ jobs:
 
       - name: check semver
         run: |
-          if [ ${{ github.ref }} == "refs/heads/master" ]; then
-            echo "Skipping master"
-            exit 0
-          fi
-          if [ $(echo ${{ github.ref }} | grep -c "gh-readonly-queue") -eq 1 ]; then
-            echo "Skipping merge queue"
+          if [ -z "$PR" ]; then
+            echo "Skipping master/merge queue"
             exit 0
           fi
 
