--- a/substrate/client/runtime-utilities/Cargo.toml
+++ b/substrate/client/runtime-utilities/Cargo.toml
@@ -33,3 +33,4 @@ thiserror = { workspace = true }
 cumulus-primitives-proof-size-hostfunction = { workspace = true, default-features = true }
 cumulus-test-runtime = { workspace = true, default-features = true }
 sp-version = { workspace = true, default-features = true }
+sp-io = { workspace = true, default-features = true }
