--- a/substrate/primitives/application-crypto/test/Cargo.toml
+++ b/substrate/primitives/application-crypto/test/Cargo.toml
@@ -18,10 +18,15 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 sp-api = { workspace = true, default-features = true }
 sp-application-crypto = { workspace = true, default-features = true }
-sp-core = { workspace = true }
+sp-core = { workspace = true, features = ["full_crypto"] }
 sp-keystore = { workspace = true }
 substrate-test-runtime-client = { workspace = true }
 
 [features]
-full_crypto = []
+default = ["std"]
+std = [
+	"full_crypto",
+]
+
+full_crypto = ["sp-core/full_crypto"]
 bls-experimental = []
