--- a/.github/workflows/command-backport.yml
+++ b/.github/workflows/command-backport.yml
@@ -16,7 +16,6 @@ jobs:
   backport:
     name: Backport pull request
     runs-on: ubuntu-latest
-    environment: release
 
     # The 'github.event.pull_request.merged' ensures that it got into master:
     if: >
@@ -30,13 +29,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Generate content write token for the release automation
-        id: generate_write_token
-        uses: actions/create-github-app-token@v1
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v2.1.0
         with:
-            app-id: ${{ vars.RELEASE_AUTOMATION_APP_ID }}
-            private-key: ${{ secrets.RELEASE_AUTOMATION_APP_PRIVATE_KEY }}
-            owner: paritytech
+          app_id: ${{ secrets.CMD_BOT_APP_ID }}
+          private_key: ${{ secrets.CMD_BOT_APP_KEY }}
 
       - name: Create backport pull requests
         uses: korthout/backport-action@v3
@@ -44,7 +42,7 @@ jobs:
         with:
           target_branches: stable2407 stable2409 stable2412
           merge_commits: skip
-          github_token: ${{ steps.generate_write_token.outputs.token }}
+          github_token: ${{ steps.generate_token.outputs.token }}
           pull_description: |
             Backport #${pull_number} into `${target_branch}` from ${pull_author}.
 
