--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asset-hub-westend-runtime"
-version = "0.25.1"
+version = "0.25.2"
 authors.workspace = true
 edition.workspace = true
 description = "Westend variant of Asset Hub parachain runtime (polkadot v1.15.0)"
@@ -87,8 +87,8 @@ bp-bridge-hub-rococo.workspace = true
 bp-bridge-hub-westend.workspace = true
 
 [dev-dependencies]
-asset-test-utils = { workspace = true, default-features = true }
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
+asset-test-utils = { default-features = true, path = "../test-utils" }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 
 [build-dependencies]
 substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
