--- a/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
@@ -108,12 +108,12 @@ snowbridge-runtime-common.workspace = true
 bridge-hub-common.workspace = true
 
 [dev-dependencies]
-bridge-hub-test-utils = { workspace = true, default-features = true }
-bridge-runtime-common = { features = ["integrity-test"], workspace = true, default-features = true }
-snowbridge-runtime-test-common = { workspace = true, default-features = true }
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
+bridge-hub-test-utils = { default-features = true, path = "../test-utils" }
+bridge-runtime-common = { features = ["integrity-test"], default-features = true, path = "../../../../../bridges/bin/runtime-common" }
+snowbridge-runtime-test-common = { default-features = true, path = "../../../../../bridges/snowbridge/runtime/test-common" }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 static_assertions = { workspace = true }
-sp-keyring = { workspace = true }
+sp-keyring = { path = "../../../../../substrate/primitives/keyring", default-features = false }
 
 [features]
 default = ["std"]
