--- a/cumulus/parachains/runtimes/coretime/coretime-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/coretime/coretime-westend/Cargo.toml
@@ -73,7 +73,7 @@ parachains-common.workspace = true
 testnet-parachains-constants = { features = ["westend"], workspace = true }
 
 [dev-dependencies]
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
+parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 
 [features]
 default = ["std"]
