--- a/polkadot/runtime/parachains/Cargo.toml
+++ b/polkadot/runtime/parachains/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "polkadot-runtime-parachains"
-version = "16.0.2"
+version = "16.0.3"
 description = "Relay Chain runtime code responsible for Parachains. (polkadot v1.15.0)"
 authors.workspace = true
 edition.workspace = true
@@ -18,10 +18,9 @@ scale-info = { features = ["derive"], workspace = true }
 serde = { features = ["alloc", "derive"], workspace = true }
 derive_more = { workspace = true, default-features = true }
 bitflags = { workspace = true }
-
-sp-api = { workspace = true }
-sp-inherents = { workspace = true }
-sp-io = { workspace = true }
+sp-api.workspace = true
+sp-inherents.workspace = true
+sp-io.workspace = true
 sp-runtime = { features = ["serde"], workspace = true }
 sp-session.workspace = true
 sp-staking = { features = ["serde"], workspace = true }
