--- a/substrate/frame/nomination-pools/test-delegate-stake/Cargo.toml
+++ b/substrate/frame/nomination-pools/test-delegate-stake/Cargo.toml
@@ -25,9 +25,9 @@ sp-std = { default-features = true, path = "../../../primitives/std" }
 sp-staking = { default-features = true, path = "../../../primitives/staking" }
 sp-core = { default-features = true, path = "../../../primitives/core" }
 
-frame-system = { workspace = true, default-features = true }
-frame-support = { features = ["experimental"], workspace = true, default-features = true }
-frame-election-provider-support = { workspace = true, default-features = true }
+frame-system = { default-features = true, path = "../../system" }
+frame-support = { features = ["experimental"], default-features = true, path = "../../support" }
+frame-election-provider-support = { default-features = true, path = "../../election-provider-support" }
 
 pallet-timestamp = { default-features = true, path = "../../timestamp" }
 pallet-balances = { default-features = true, path = "../../balances" }
