--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -38,9 +38,9 @@ ethereum-types = { workspace = true, features = ["codec", "rlp", "serialize"] }
 frame-benchmarking = { optional = true, workspace = true }
 frame-support = { workspace = true }
 frame-system = { workspace = true }
-pallet-revive-fixtures = { workspace = true, default-features = false, optional = true }
-pallet-revive-uapi = { workspace = true, default-features = true }
-pallet-revive-proc-macro = { workspace = true, default-features = true }
+pallet-revive-fixtures = { workspace = true, optional = true }
+pallet-revive-uapi = { workspace = true, features = ["scale"] }
+pallet-revive-proc-macro = { workspace = true }
 pallet-transaction-payment = { workspace = true }
 sp-api = { workspace = true }
 sp-arithmetic = { workspace = true }
@@ -59,7 +59,6 @@ subxt-signer = { workspace = true, optional = true, features = [
 array-bytes = { workspace = true, default-features = true }
 assert_matches = { workspace = true }
 pretty_assertions = { workspace = true }
-pallet-revive-fixtures = { workspace = true, default-features = true }
 secp256k1 = { workspace = true, features = ["recovery"] }
 serde_json = { workspace = true }
 hex-literal = { workspace = true }
@@ -69,6 +68,7 @@ pallet-balances = { workspace = true, default-features = true }
 pallet-timestamp = { workspace = true, default-features = true }
 pallet-utility = { workspace = true, default-features = true }
 pallet-proxy = { workspace = true, default-features = true }
+pallet-revive-fixtures = { workspace = true, default-features = true }
 sp-keystore = { workspace = true, default-features = true }
 sp-tracing = { workspace = true, default-features = true }
 xcm-builder = { workspace = true, default-features = true }
