--- a/.github/workflows/networking-benchmarks.yml
+++ b/.github/workflows/networking-benchmarks.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -52,8 +50,8 @@ jobs:
   publish-benchmarks:
     timeout-minutes: 60
     needs: [build]
-    # if: github.ref == 'refs/heads/master'
-    # environment: subsystem-benchmarks
+    if: github.ref == 'refs/heads/master'
+    environment: subsystem-benchmarks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -82,30 +80,30 @@ jobs:
           git config --global --add safe.directory '*'
           ls -lsR ./charts
 
-      # - uses: actions/create-github-app-token@v1
-      #   id: app-token
-      #   with:
-      #     app-id: ${{ secrets.POLKADOTSDK_GHPAGES_APP_ID }}
-      #     private-key: ${{ secrets.POLKADOTSDK_GHPAGES_APP_KEY }}
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.POLKADOTSDK_GHPAGES_APP_ID }}
+          private-key: ${{ secrets.POLKADOTSDK_GHPAGES_APP_KEY }}
 
-      # - name: Generate ${{ env.BENCH }}
-      #   env:
-      #     BENCH: notifications_protocol
-      #   uses: benchmark-action/github-action-benchmark@v1
-      #   with:
-      #     tool: "cargo"
-      #     output-file-path: ./charts/${{ env.BENCH }}.txt
-      #     benchmark-data-dir-path: ./bench/${{ env.BENCH }}
-      #     github-token: ${{ steps.app-token.outputs.token }}
-      #     auto-push: true
+      - name: Generate ${{ env.BENCH }}
+        env:
+          BENCH: notifications_protocol
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          tool: "cargo"
+          output-file-path: ./charts/${{ env.BENCH }}.txt
+          benchmark-data-dir-path: ./bench/${{ env.BENCH }}
+          github-token: ${{ steps.app-token.outputs.token }}
+          auto-push: true
 
-      # - name: Generate ${{ env.BENCH }}
-      #   env:
-      #     BENCH: request_response_protocol
-      #   uses: benchmark-action/github-action-benchmark@v1
-      #   with:
-      #     tool: "cargo"
-      #     output-file-path: ./charts/${{ env.BENCH }}.txt
-      #     benchmark-data-dir-path: ./bench/${{ env.BENCH }}
-      #     github-token: ${{ steps.app-token.outputs.token }}
-      #     auto-push: true
+      - name: Generate ${{ env.BENCH }}
+        env:
+          BENCH: request_response_protocol
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          tool: "cargo"
+          output-file-path: ./charts/${{ env.BENCH }}.txt
+          benchmark-data-dir-path: ./bench/${{ env.BENCH }}
+          github-token: ${{ steps.app-token.outputs.token }}
+          auto-push: true
